# metrabs

./: .gitignore  app.py  environment.yml  install_pytorch.sh  pyproject.toml
metrabs_pytorch/multiperson/: multiperson_model.py
metrabs_pytorch/scripts/: run_video.py  viz_matplotlib.py
