[build-system]
requires = ["flit_core >= 3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "metrabs_pytorch"
version = "0.1.0"
authors = [{name = ""}]
description = "A Python package for human motion tracking"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  # "torch",
  # "torchvision",
  #"vtk==9.4.2",
  #"mayavi==4.8.3",
  "hydra-core",
  "ultralytics",
  "av",
  "posepile@git+https://github.com/Vittorio-Caggiano/PosePile.git",
  "poseviz@git+https://github.com/isarandi/poseviz.git",
  "cameralib@git+https://github.com/isarandi/cameralib.git",
  "mediapy",
  "einops",
  "tqdm",
  "Pillow<10",
]

#[tool.uv]
#no-build-isolation-package = ["mayavi"]

#[[tool.uv.dependency-metadata]]
#name = "mayavi"
#version = "4.8.3"
#requires-dist = ["numpy"]

[tool.ruff.lint]
ignore = ["C901", "E501", "E741", "F402", "F823" ]
select = ["C", "E", "F", "I", "W"]
